--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>广西工业职业技术学院</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="./css/zhengshu_detail.css">
     <!--[if IE 9]><link rel="stylesheet" href="./css/zhengshu_detail_ie9.css"><![endif]-->
     <style>
@@ -79,7 +82,7 @@
                 title: '广西工业职业技术学院',
                 desc: '易证书',
                 link: 'https://',
-                imgUrl: 'https://static.yibanyun.cn/Public/Uploads/2021-06-15/1623734463.jpg',
+                imgUrl: './images/1623734463.jpg',
                 trigger: function (res) {
                     // alert('用户点击发送给朋友');
                 },
